
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {TYPE_1__ sin_addr; int sin_port; int sin_family; } ;
struct sockaddr {int dummy; } ;
struct hostent {int dummy; } ;
typedef int sa ;


 int AF_INET ;
 int F_SETFL ;
 int O_NONBLOCK ;
 int SOCK_STREAM ;
 scalar_t__ connect (int,struct sockaddr*,int) ;
 int fcntl (int,int ,int ) ;
 int htons (int) ;
 int inet_addr (char*) ;
 int perror (char*) ;
 int printf (char*,int) ;
 int socket (int ,int ,int ) ;

int openhost (char *target) {

  int sock;
  struct hostent *he;
  struct sockaddr_in sa;
  int localport;
  sock=socket(AF_INET,SOCK_STREAM,0);


  sa.sin_family=AF_INET;



  sa.sin_port=htons(515);
  sa.sin_addr.s_addr=inet_addr(target);

  if(connect(sock,(struct sockaddr *)&sa,sizeof(sa)) < 0) {
    perror("Can't connect");
    return (-1);
  } else {
    fcntl(sock,F_SETFL,O_NONBLOCK);
  }
  printf("Source port: %d  : Connected...\n",localport);
  return(sock);
}
